[tool.poetry]
name = "cs101"
version = "0.1.0"
description = ""
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.2.0"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
mypy = "^0.770"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
